<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">





    <androidx.cardview.widget.CardView
        android:id="@+id/topCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        android:backgroundTint="?attr/colorSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:contentDescription="@string/silo_logo"
            android:src="@drawable/silo_dark"
            android:scaleType="centerCrop"
            android:alpha="0.5"
            android:layout_gravity="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_user_photo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cardCornerRadius="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/iv_home_user_profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/user_photo"
                    android:src="@drawable/ic_profile_circle"
                    />


            </androidx.cardview.widget.CardView>


            <ImageView
                android:id="@+id/notification_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/notification_icon"
                android:src="@drawable/ic_notification"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/settings_icon"/>


            <ImageView
                android:id="@+id/settings_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/settings_icon"
                android:src="@drawable/ic_settings"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Theme Mode"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/topCard"
        app:layout_constraintStart_toStartOf="parent"/>



    <FrameLayout
        android:id="@+id/MainFragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:translationY="10dp"
        app:layout_constraintTop_toBottomOf="@id/themeSwitch"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconSize="38dp"
        android:background="@drawable/bottom_nav_background"
        app:itemActiveIndicatorStyle="@null"
        app:labelVisibilityMode="labeled"
        app:itemRippleColor="@null"
        app:itemIconTint="@color/light_gray"
        app:itemTextColor="@color/light_gray"
        app:itemBackground="@drawable/bottom_nav_item_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>