<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">






    <include
        layout="@layout/auth_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>






    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">






        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:src="@drawable/silo_white"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <TextView
            android:id="@+id/tvSignInTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:translationX="160dp"
            android:translationY="-30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            />



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="16dp"
            android:translationY="-20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?attr/colorSurface"
            app:layout_constraintTop_toBottomOf="@id/tvSignInTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                >




                <!-- Email -->
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Email"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="@color/hint_text"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/et_shape"
                    android:padding="8dp"
                    android:layout_marginTop="20dp" />

                <!-- Password -->
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Password"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="@color/hint_text"
                    android:inputType="textPassword"
                    android:background="@drawable/et_shape"
                    android:padding="8dp"
                    android:layout_marginTop="16dp" />

                <!-- Sign In Button -->
                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/sign_in"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="?android:textColorSecondary"
                    android:backgroundTint="?attr/colorPrimary"
                    android:layout_marginTop="24dp"/>

                <!-- Or Divider -->
                <LinearLayout
                    android:id="@+id/ll_Or_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <View
                        android:layout_width="120dp"
                        android:layout_height="2dp"
                        android:layout_marginEnd="20dp"
                        android:background="?android:textColorSecondary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orContinue"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="18sp"/>

                    <View
                        android:layout_width="120dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="20dp"
                        android:background="?android:textColorSecondary" />
                </LinearLayout>

                <!-- Google Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignInGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="?attr/colorPrimary"
                    android:text="@string/btn_google"
                    android:textAlignment="textStart"
                    android:paddingStart="50dp"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="16sp"
                    app:cornerRadius="24dp"
                    app:icon="@drawable/google"
                    app:iconGravity="textStart"
                    app:iconPadding="14dp"
                    app:iconSize="35dp"
                    app:iconTint="@null"/>

                <!-- Facebook Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignInFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="?attr/colorPrimary"
                    android:text="@string/btn_facebook"
                    android:textAlignment="textStart"
                    android:paddingStart="55dp"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="16sp"
                    app:cornerRadius="24dp"
                    app:icon="@drawable/facebook"
                    app:iconGravity="textStart"
                    app:iconPadding="14dp"
                    app:iconSize="25dp"
                    app:iconTint="@null" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="40dp">


                    <!-- Don't have account -->
                    <TextView
                        android:id="@+id/tvNoAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Don't have an account?"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="18sp"
                        android:layout_marginEnd="12dp" />

                    <!-- Sign Up link -->
                    <TextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_underlined"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="18sp"/>

                </LinearLayout>





            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.core.widget.NestedScrollView>
