<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".SignUpFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">





    <include
        layout="@layout/auth_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">






    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        >





        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:src="@drawable/silo_white"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />



        <TextView
            android:id="@+id/tvSignUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:translationX="160dp"
            android:translationY="-30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="16dp"
            android:translationY="-20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?attr/colorSurface"
            app:layout_constraintTop_toBottomOf="@id/tvSignUpTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                >





                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:hint="First Name"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="@color/hint_text"
                    android:background="@drawable/et_shape"
                    android:padding="8dp"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:hint="Last Name"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="@color/hint_text"
                    android:background="@drawable/et_shape"
                    android:padding="8dp"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Email"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="@color/hint_text"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/et_shape"
                    android:padding="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/etFirstName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Password"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="@color/hint_text"
                    android:inputType="textPassword"
                    android:background="@drawable/et_shape"
                    android:padding="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/etEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Confirm Password"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="@color/hint_text"
                    android:inputType="textPassword"
                    android:background="@drawable/et_shape"
                    android:padding="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/etPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="Sign Up"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="?android:textColorSecondary"
                    android:backgroundTint="?attr/colorPrimary"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <LinearLayout
                    android:id="@+id/ll_Or_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <View
                        android:layout_width="120dp"
                        android:layout_height="2dp"
                        android:layout_marginEnd="20dp"
                        android:background="?android:textColorSecondary" />

                    <TextView
                        android:id="@+id/tvOrContinue_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orContinue"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="120dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="20dp"
                        android:background="?android:textColorSecondary" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignupLoginGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="?attr/colorPrimary"
                    android:textColor="?android:textColorSecondary"
                    android:text="@string/btn_google"
                    android:textAlignment="textStart"
                    android:paddingStart="50dp"
                    android:textSize="16sp"
                    app:cornerRadius="24dp"
                    app:icon="@drawable/google"
                    app:iconGravity="textStart"
                    app:iconPadding="14dp"
                    app:iconSize="35dp"
                    app:iconTint="@null"
                    app:layout_constraintTop_toBottomOf="@+id/ll_Or_sign_up"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignupLoginFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="?attr/colorPrimary"
                    android:textColor="?android:textColorSecondary"
                    android:text="@string/btn_facebook"
                    android:textAlignment="textStart"
                    android:paddingStart="55dp"
                    android:textSize="16sp"
                    app:cornerRadius="24dp"
                    app:icon="@drawable/facebook"
                    app:iconGravity="textStart"
                    app:iconPadding="14dp"
                    app:iconSize="25dp"
                    app:iconTint="@null"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignupLoginGoogle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignupLoginFacebook"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">


                    <TextView
                        android:id="@+id/tvHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Already have an account?"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="18sp"
                        android:layout_marginEnd="12dp"/>

                    <TextView
                        android:id="@+id/tvSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_underlined"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="18sp" />


                </LinearLayout>







            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>





    </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    </FrameLayout>

</androidx.core.widget.NestedScrollView>
